test/Fail/SafeFlagPrimTrustMe-2.agda
{-# OPTIONS --safe #-}

module SafeFlagPrimTrustMe-2 where

open import Agda.Builtin.TrustMe
